EXTRA_DIST =                            \
        add_song.py                     \
        coverart_fetch.py               \
        create_mp3_tags_from_itdb.py    \
	fix_empty_artist_field.py	\
        play_with_ipod_api.py           \
        play_with_smart_playlists.py    \
        save_photos.py                  \
        tag_genre_from_audioscrobber.py \
        toy_around.py
